k3s/apps/n8n/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: n8n
  namespace: automation
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`n8n.home.ijlalahmad.dev`)
      kind: Rule
      services:
        - name: n8n
          port: 8400
  tls:
    secretName: wildcard-home-ijlalahmad-dev-tls
